# LatteCompiler

./: .gitignore  LatteCompiler.cabal  README  auto_test.sh  latc_x86_64
example_tests/: tail_call.lat  tco.lat  test_arr_struct  test_arr_struct.lat  test_gcse  test_gcse.lat  test_lcse_correctness  test_lcse_correctness.lat
libs/: calls.asm  makefile  prelude.c  runtime.c
src/: AsmBackend.hs  Frontend.hs  Main.hs  Optimizations.hs  Quadruples.hs
src/Parsing/: AbsLatte.hs  ErrM.hs  LexLatte.hs  LexLatte.x  ParLatte.hs  ParLatte.y
