name:                LatteCompiler
version:             0.1.0.0
synopsis:            Compiler of Latte - a subset of Java
homepage:            github.com/deutzia/LatteCompiler
license:             MIT
author:              Iwona Kotlarska
maintainer:          pinus314@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10


executable latc_x86_64
  main-is:           Main.hs
  other-modules:     Frontend
                     Parsing.AbsLatte
                     Parsing.ErrM
                     Parsing.LexLatte
                     Parsing.ParLatte
  build-depends:     base >=4.13 && <4.14, array >= 0.5 && < 0.6,  containers >=0.6 && <0.7, megaparsec >= 8.0 && < 8.0.1, mtl >=2.2 && <=2.3, filepath >=1.4 && <1.5, ghc >= 8.8 && < 8.9
  hs-source-dirs:    src
  default-language:  Haskell2010

